# cocker

./: .gitignore  .justfile  README.md  cocker-dev.yml  environment.yml  pyproject.toml
cocker/: .gitignore  cocker-dev.yml  environment.yml  main.py
cocker/environments/: TransformerEngine.yml  base.yml  build.yml  cpu.yml  cv.yml  data.yml  deepspeed.yml  dl.yml  faiss.yml  google.yml  gpu.yml  huggingface.yml  ipytorch.yml  jax.yml  jlab.yml  kaggle.yml  nlp.yml  notebook.yml  openai.yml  package.yml  polars.yml  poor.yml  r.yml  torch-cpu.yml  torch-cu11.yml  torch-cu12.yml  torch-gpu.yml  torch-legacy.yml  torch-nightly.yml  vllm.yml  xeus-lua.yml  xf.yml
tests/: dl.yml  environment.yml  requirements.txt  setup_env.sh
